--- a/app/src/main/res/layout/activity_vi.xml
+++ b/app/src/main/res/layout/activity_vi.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/vi"
@@ -7,161 +7,79 @@
     android:layout_height="match_parent"
     tools:context=".vi.VIActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal">
+    <ImageView
+        android:id="@+id/BackgroundImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/background_image"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/imagemain" />
 
-        <ImageView
-            android:id="@+id/imageView12"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            app:srcCompat="@drawable/logo"
-            android:contentDescription="@string/logo_desc" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="250dp"
-            android:layout_height="40dp"
-            android:layout_weight="0"
-            android:text="@string/hello_xyz"
-            android:textColor="@color/black"
-            android:textSize="30sp"
-            tools:ignore="TextSizeCheck" />
-
-        <ImageView
-            android:id="@+id/imageView10"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_weight="0"
-            android:baselineAlignBottom="false"
-            app:srcCompat="@drawable/languages"
-            android:contentDescription="@string/languages_desc" />
-    </LinearLayout>
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="63dp"
+        android:layout_height="61dp"
+        android:background="#00FFFFFF"
+        android:contentDescription="@string/language_btn"
+        android:scaleType="centerInside"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/languages" />
 
     <ImageView
-        android:id="@+id/imageView13"
-        android:layout_width="wrap_content"
-        android:layout_height="250dp"
-        android:layout_marginTop="50dp"
-        app:srcCompat="@drawable/imagemain"
-        android:contentDescription="@string/imagemain_desc" />
+        android:id="@+id/logoImage"
+        android:layout_width="70dp"
+        android:layout_height="80dp"
+        android:contentDescription="@string/lumina_logo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="350dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="10dp"
-            android:layout_weight="1"
-            android:padding="12dp"
-            app:srcCompat="@drawable/notificationbell"
-            android:contentDescription="@string/notification_desc" />
-
-        <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_weight="1"
-            android:contentDescription="@string/query_desc"
-            android:padding="12dp"
-            app:srcCompat="@drawable/query"
-            tools:ignore="ImageContrastCheck" />
-
-        <ImageView
-            android:id="@+id/imageView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_weight="1"
-            android:padding="12dp"
-            app:srcCompat="@drawable/help"
-            android:contentDescription="@string/help_desc" />
-    </LinearLayout>
-
-    <LinearLayout
-        style="?android:attr/buttonBarStyle"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="450dp"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/button"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="0dp"
-            android:layout_weight="1"
-            android:backgroundTint="#957DC3"
-            android:minHeight="48dp"
-            android:text="@string/notification"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="13sp"
-            tools:ignore="VisualLintButtonSize,TouchTargetSizeCheck" />
-
-        <Button
-            android:id="@+id/button1"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="0dp"
-            android:layout_weight="1"
-            android:backgroundTint="#957DC3"
-            android:minHeight="48dp"
-            android:text="@string/queries"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="13sp"
-            tools:ignore="VisualLintButtonSize,TouchTargetSizeCheck" />
-
-        <Button
-            android:id="@+id/button2"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="0dp"
-            android:layout_weight="1"
-            android:backgroundTint="#957DC3"
-            android:minHeight="48dp"
-            android:text="@string/help"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="13sp"
-            tools:ignore="VisualLintButtonSize,TouchTargetSizeCheck" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:gravity="center"
+        android:layout_width="410dp"
+        android:layout_height="157dp"
+        android:layout_weight="1"
         android:orientation="horizontal"
-        tools:ignore="VisualLintBounds">
+        android:weightSum="3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/BackgroundImage"
+        tools:layout_editor_absoluteX="1dp">
 
+        <ImageView
+            android:id="@+id/icon_notification"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/notification_image"
+            android:scaleX="@dimen/IconScales"
+            android:scaleY="@dimen/IconScales"
+            app:srcCompat="@drawable/notificationbell" />
 
+        <ImageView
+            android:id="@+id/icon_exams"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/exam_image"
+            android:paddingLeft="20dp"
+            app:srcCompat="@drawable/exam" />
 
-        <include layout="@layout/layout_bottom_bar"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+        <ImageView
+            android:id="@+id/icon_allotments"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/allotment_image"
+            android:scaleX="0.80"
+            android:scaleY="0.80"
+            app:srcCompat="@drawable/delegate" />
+
     </LinearLayout>
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
