--- a/app/src/main/res/layout/notification_admin.xml
+++ b/app/src/main/res/layout/notification_admin.xml
@@ -5,7 +5,7 @@
     android:id="@+id/notification_admin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".admin.notification_admin">
+    tools:context=".admin.NotificationAdmin">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
