--- a/app/src/main/res/layout/activity_addqueries_admin.xml
+++ b/app/src/main/res/layout/activity_addqueries_admin.xml
@@ -31,13 +31,13 @@
         app:srcCompat="@drawable/logo" />
 
 
-
-    <include layout="@layout/layout_bottom_bar"
+    <include
+        layout="@layout/layout_bottom_bar"
         android:layout_width="0dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_height="50dp"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/query_text"
@@ -56,18 +56,19 @@
         android:id="@+id/button2"
         android:layout_width="205dp"
         android:layout_height="57dp"
-        android:layout_marginTop="55dp"
+        android:layout_marginTop="118dp"
         android:contentDescription="@string/submit"
         android:text="@string/submit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine2" />
+        app:layout_constraintTop_toBottomOf="@+id/query_text" />
 
-    <include layout="@layout/layout_bottom_bar"
+    <include
+        layout="@layout/layout_bottom_bar"
         android:layout_width="0dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_height="50dp"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
